# we123

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/we123/: __init__.py  __main__.py  main.py
