[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "we123"
version = "0.1.0"
description = "Minimal local console application that prints a fixed message."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "we123 Maintainers" }]
dependencies = []

[project.scripts]
we123 = "we123.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
